update template with class name

--- a/src/templates/icons.scss
+++ b/src/templates/icons.scss
@@ -8,7 +8,7 @@
 		url('<%= fontPath %><%= fontName %>.svg<%= cacheBusterQueryString %>#<%= fontName %>') format('svg');
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="<%= cssClass%>"], [class*="<%= cssClass%>"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "<%= fontName %>";
   font-style: normal;
