include ::before in css template

--- a/src/templates/icons.scss
+++ b/src/templates/icons.scss
@@ -22,7 +22,7 @@
 }
 
 <% _.each(glyphs, function(glyph) { %>
-.<%= cssClass%>-<%= glyph.fileName %> {
+.<%= cssClass%>-<%= glyph.fileName %>::before {
   content: "\<%= glyph.codePoint %>"
 }
 <% });%>
